force-app/main/default/objects/Hospitality__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Hospitalities</relationshipLabel>
    <relationshipName>Hospitalities</relationshipName>
    <type>Lookup</type>
</CustomField>