force-app/main/default/objects/Hospitality__c/fields/Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest Name</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Hospitalities</relationshipLabel>
    <relationshipName>Hospitalities</relationshipName>
    <type>Lookup</type>
</CustomField>