force-app/main/default/objects/Hospitality__c/fields/Meal_Cost__c.field-meta.xml
<CustomField>
    <fullName>Meal_Cost__c</fullName>
    <label>Meal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>