force-app/main/default/objects/Hospitality__c/fields/Meal_Plan__c.field-meta.xml
<CustomField>
    <fullName>Meal_Plan__c</fullName>
    <label>Meal Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Brunch</fullName>
            </value>
            <value>
                <fullName>Lunch + Dinner</fullName>
            </value>
            <value>
                <fullName>All-Day Meals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>