force-app/main/default/objects/Hospitality__c/fields/Room_Cost__c.field-meta.xml
<CustomField>
    <fullName>Room_Cost__c</fullName>
    <label>Room Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>