force-app/main/default/objects/Hospitality__c/fields/Service_Duration__c.field-meta.xml
<CustomField>
    <fullName>Service_Duration__c</fullName>
    <formula>TEXT(FLOOR( Check_Out_Date_Time__c  -  Check_In_Date_Time__c )) &amp; 
IF(FLOOR(Check_Out_Date_Time__c - Check_In_Date_Time__c ) = 1, &quot; Day&quot;, &quot; Days&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Duration</label>
    <type>Text</type>
</CustomField>