force-app/main/default/objects/Hospitality__c/fields/Total_Budget_of_Hospitality__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_of_Hospitality__c</fullName>
    <formula>Meal_Cost__c  +  Room_Cost__c  +  Transport_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget of Hospitality</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>