force-app/main/default/objects/Hospitality__c/fields/Transport_Type__c.field-meta.xml
<CustomField>
    <fullName>Transport_Type__c</fullName>
    <inlineHelpText>Select Transport Type</inlineHelpText>
    <label>Transport Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Shuttle</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>